--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,14 @@
     services:
       javaEcommerce:
         container_name: ecommerce-java
-        image: wvitorsj/ecommerce-treinamento-ibm:$TAG
+        image: wvitorsj/ecommerce-ibm:IMG_PARA_SUBSTITUIR
         environment:
           MYSQL_HOST: ecommerce.cs9nb0cc2hc2.us-east-1.rds.amazonaws.com
           DATABASE: ecommerce
           MYSQL_USER: root
           MYSQL_PASS: a2g6h3v5
         ports:
-          - "8080:8080"
+          - "8090:8090"
                
                 
            
