--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@
     services:
       javaEcommerce:
         container_name: ecommerce-java
-        image: wvitorsj/ecommerce-ibm:IMG_PARA_SUBSTITUIR
+        image: IMG_PARA_SUBSTITUIR
         environment:
           MYSQL_HOST: ecommerce.cs9nb0cc2hc2.us-east-1.rds.amazonaws.com
           DATABASE: ecommerce
@@ -10,6 +10,3 @@
           MYSQL_PASS: a2g6h3v5
         ports:
           - "8090:8090"
-               
-                
-           
